--- a/面试题/HTTP/11.谈谈你对 dns-prefetch 的理解.md
+++ b/面试题/HTTP/11.谈谈你对 dns-prefetch 的理解.md
@@ -15,7 +15,8 @@ DNS Prefetching 是提前加载域名解析的，省去了解析时间,可帮助
 <link rel="dns-prefetch" href="https://fonts.gstatic.com/" />
 ```
 
-这个功能有个默认加载条件，所有的 a 标签的 href 都会自动去启用 DNS Prefetching，也就是说，你网页的 a 标签 href 带的域名，是不需要在 head 里面加上 link 手动设置的。但 a 标签的默认启动在 HTTPS 不起作用。
+这个功能有个默认加载条件，所有的 a 标签的 href 都会自动去启用 DNS Prefetching，也就是说，
+你网页的 a 标签 href 带的域名，是不需要在 head 里面加上 link 手动设置的。但 a 标签的默认启动在 HTTPS 不起作用。
 
 这时要使用 meta 里面 http-equiv 来强制启动功能。
 
