--- a/面试题/HTTP/7.CDN 理解，有 CDN 和没有 CDN 区别.md
+++ b/面试题/HTTP/7.CDN 理解，有 CDN 和没有 CDN 区别.md
@@ -1,6 +1,7 @@
 # CDN 理解，有 CDN 和没有 CDN 区别
 
-CDN 是将源站内容分发至最接近用户的节点，使用户可就近取得所需内容，提高用户访问的响应速度和成功率。解决因分布、带宽、服务器性能带来的访问延迟问题，适用于站点加速、点播、直播等场景。
+CDN 是将源站内容分发至最接近用户的节点，使用户可就近取得所需内容，提高用户访问的响应速度和成功率。
+解决因分布、带宽、服务器性能带来的访问延迟问题，适用于站点加速、点播、直播等场景。
 
 最简单的 CDN 网络是由，一台 DNS 服务和几台缓存服务器组成的
 
