--- a/面试题/css/2.flex.md
+++ b/面试题/css/2.flex.md
@@ -1,5 +1,5 @@
-
 ## 容器
+
 display: flex
 align-item: center;baseline;
 justify-content: space-between;flex-start;flex-end;center;space-around;
@@ -8,52 +8,53 @@ flex-wrap: nowrap; wrap; wrap-reverse
 align-content: flex-start;
 
 ## 项目属性
+
 flex: 0 1 auto; 不放大、要缩小 默认
-flex: auto(1 1 auto); 有放大、有缩小
+flex: auto(1 1 auto); 又放大、又缩小
 flext: none(0,0,auto); 不放大、不缩小
 flex: 放大 缩小
-align-self: 覆盖父亲的 align-item, 定义单个 align-self 
+align-self: 覆盖父亲的 align-item, 定义单个 align-self
 order: 排序值越小越靠前
 
 ```html
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <style> 
-    .box { 
-         display: flex; 
-         width: 400px; 
-         outline: 1px red solid; 
-    } 
-    
-    .item1 { 
-         flex: 0 2 300px; 
-         background-color: #32d6d6; 
-    } 
-    
-    .item2 { 
-         flex: 0 1 200px; 
-         background-color: #e2a83e; 
-    } 
-    
-    .item3 { 
-         flex: 0 2 100px; 
-         background-color: #b85ad0; 
-    } 
-    </style> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <style>
+      .box {
+        display: flex;
+        width: 400px;
+        outline: 1px red solid;
+      }
+
+      .item1 {
+        flex: 0 2 300px;
+        background-color: #32d6d6;
+      }
+
+      .item2 {
+        flex: 0 1 200px;
+        background-color: #e2a83e;
+      }
+
+      .item3 {
+        flex: 0 2 100px;
+        background-color: #b85ad0;
+      }
+    </style>
     <!-- ...  -->
-    <div class="box"> 
-    <div class="item1">1</div> 
-    <div class="item2">2</div> 
-    <div class="item3">3</div> 
+    <div class="box">
+      <div class="item1">1</div>
+      <div class="item2">2</div>
+      <div class="item3">3</div>
     </div>
-</body>
+  </body>
 </html>
 
 <!-- 最终
@@ -76,5 +77,4 @@ order: 排序值越小越靠前
 <!-- 300 * 3/5 = 180
 200 * 4/5 = 160
 100 * 3/5 = 60 -->
-
 ```
