--- a/面试题/js/12.事件机制捕获、冒泡.md
+++ b/面试题/js/12.事件机制捕获、冒泡.md
@@ -23,12 +23,16 @@ window.addEventListener(
 
 ```javascript
 // Get the element, add a click listener...
-document.getElementById("parent-list").addEventListener("click", function(e) {
-	// e.target is the clicked element!
-	// If it was a list item
-	if(e.target && e.target.nodeName == "LI") {
-		// List item found!  Output the ID!
-		console.log("List item ", e.target.id.replace("post-", ""), " was clicked!");
-	}
+document.getElementById("parent-list").addEventListener("click", function (e) {
+  // e.target is the clicked element!
+  // If it was a list item
+  if (e.target && e.target.nodeName == "LI") {
+    // List item found!  Output the ID!
+    console.log(
+      "List item ",
+      e.target.id.replace("post-", ""),
+      " was clicked!"
+    );
+  }
 });
 ```
