--- a/面试题/js/13.JS 中通过 `bind` 绑定的方法，再使用 `apply` 或 `call` 会改变它的 `this` 吗.md
+++ b/面试题/js/13.JS 中通过 `bind` 绑定的方法，再使用 `apply` 或 `call` 会改变它的 `this` 吗.md
@@ -55,20 +55,19 @@ console.log(f.call(c)); //
 
 ```js
 function a() {
-  console.log('a')
+  console.log("a");
 }
 function b() {
-  console.log('b')
+  console.log("b");
 }
-a.call.call(b) // 'b'
+a.call.call(b); // 'b'
 
-
-Function.prototype._call = function (context) { // context = b
+Function.prototype._call = function (context) {
+  // context = b
   const key = Symbol();
   context[key] = this; // this = call, 关键点多个 call.call.call 中 this 指向 call
   const result = context[key](); // b.call() 就是执行b
-  delete context[key]; 
+  delete context[key];
   return result;
 };
-
 ```
