--- a/面试题/js/16.ES6 中 Reflect 对象，它什么优点.md
+++ b/面试题/js/16.ES6 中 Reflect 对象，它什么优点.md
@@ -5,60 +5,61 @@
 - 它是对 Object 一些明显内部的方法(defineProperty), 放到 Reflect 对象上，
 
 - object 在使用的时候，不抛错，Reflect 是返回 true fasle
+
 ```js
 //老写法
-try{
-  Object.defineProperty(target,property,attributes);
+try {
+  Object.defineProperty(target, property, attributes);
   //successs
-}catch(e){
+} catch (e) {
   //failure
 }
 //新写法
-if(Reflect.defineProperty(target,property,attributes)){
+if (Reflect.defineProperty(target, property, attributes)) {
   //success
-}else{
+} else {
   //failure
 }
 ```
 
-- Reflect 更加语义化 get set has, 容易读 
-```js
+- Reflect 更加语义化 get set has, 容易读
 
+```js
 //老写法
-Function.prototype.apply.call(Math.floor,undefined,[1.75])//1
+Function.prototype.apply.call(Math.floor, undefined, [1.75]); //1
 //新写法
-Reflect.apply(Math.floor,undefined,[1.75])//1
+Reflect.apply(Math.floor, undefined, [1.75]); //1
 
 let obj = {
-  label: 'A',
-  value: 20
-}
-Reflect.deleteProperty(obj, 'value')
+  label: "A",
+  value: 20,
+};
+Reflect.deleteProperty(obj, "value");
 console.log(obj); // [object Object] { label: "A" }
-Reflect.has(obj, 'label');  // true
-console.log(Reflect.get(obj, 'label')) // 'A'
+Reflect.has(obj, "label"); // true
+console.log(Reflect.get(obj, "label")); // 'A'
 ```
 
 - proxy
 
 ```js
 var cat = {
-  name: 'cat'
-}
+  name: "cat",
+};
 var loggedObj = new Proxy(cat, {
-  get: function(target, name) {
-    console.log('get' + name);
-    return Reflect.get(target, name)
+  get: function (target, name) {
+    console.log("get" + name);
+    return Reflect.get(target, name);
   },
-  set:function(target, name) {
-    console.log('set' + name);
+  set: function (target, name) {
+    console.log("set" + name);
     Reflect.set(target, name);
-  }, 
-  has: function(target, name) {
-    console.log('has' + name);
+  },
+  has: function (target, name) {
+    console.log("has" + name);
     return Reflect.has(target, name);
-  }
-})
+  },
+});
 
-console.log(loggedObj['value'] = '123')
+console.log((loggedObj["value"] = "123"));
 ```
