--- a/面试题/js/22.不用 promise, 那些可实现 promise generator.md
+++ b/面试题/js/22.不用 promise, 那些可实现 promise generator.md
@@ -1,43 +1,43 @@
 # 不用 promise, 那些可实现 promise generator
 
 ## generator
+
 generator 是协程 在 ES6 实现，最大特点交出函数执行权，控制迭代器的函数，可以暂停可以恢复
 
 generator 定义不能用箭头函数
 
 ```js
-function *fun(x) {
-  let y = yield x + 1
+function* fun(x) {
+  let y = yield x + 1;
   return y;
 }
 ```
 
 ```js
 function getCallSettings() {
-    // utils.ajax方法支持返回promise对象，把得到的promise return出去
-    return utils.ajax({
-        url: '/dialer/dialerSetting',
-        method: "GET",
-    });
+  // utils.ajax方法支持返回promise对象，把得到的promise return出去
+  return utils.ajax({
+    url: "/dialer/dialerSetting",
+    method: "GET",
+  });
 }
-function *dealData() {
-    try {
-        let settingInfo = yield getCallSettings();
-        // do something……
-    }
-    catch(err) {
-        console.log(err); // 接收错误
-    }
+function* dealData() {
+  try {
+    let settingInfo = yield getCallSettings();
+    // do something……
+  } catch (err) {
+    console.log(err); // 接收错误
+  }
 }
 
 let it = dealData();
 let promise = it.next().value; // 注意，这里拿到yield出来的promise
 promise.then(
-    (info) => {
-        it.next(info); // 拿到info传给yield表达式
-    }, 
-    (err) => {
-        it.throw(err); // 抛出错误
-    }
+  (info) => {
+    it.next(info); // 拿到info传给yield表达式
+  },
+  (err) => {
+    it.throw(err); // 抛出错误
+  }
 );
 ```
