--- a/面试题/js/28.[]+{}.md
+++ b/面试题/js/28.[]+{}.md
@@ -3,11 +3,11 @@
 
 // 数组转化为字符串，转化为 number
 {}+[] = 0 // {} + '' => {} + 0 = > 0
-4+[1,2,3]= '41,2,3' 
+4+[1,2,3]= '41,2,3'
 []+0 = '0'
 
 // boolean 转化为 Number
-{}+true=1 
+{}+true=1
 true+true=2
 
 // 有一方是字符串都转化为字符串
@@ -19,8 +19,9 @@ true+true=2
 ```
 
 那么对于除了加法的运算符来说，只要其中一方是数字，那么另一方就会被转为数字
+
 ```js
-4 * '3' // 12
-4 * [] // 0
-4 * [1, 2] // NaN
+4 * "3"; // 12
+4 * []; // 0
+4 * [1, 2]; // NaN
 ```
