--- a/面试题/js/29.模块化.md
+++ b/面试题/js/29.模块化.md
@@ -1,64 +1,76 @@
 # 模块化
+
 多人开发中
+
 - 命名空间冲突
 - 模块复用
 
 CommonJS
-  - Node.js 是基于 CommonJS 来实现的，同步导入文件，
-  - 是值的导出，后面值发生变化需要重新导入
-  - 运行时加载
+
+- Node.js 是基于 CommonJS 来实现的，同步导入文件，
+- 是值的导出，后面值发生变化需要重新导入
+- 运行时加载
 
 ESModule 是引用的导出
-  - 编译时输出
-  - export default 默认导出是一个值，export { a } 批量导出是一个地址
+
+- 编译时输出
+- export default 默认导出是一个值，export { a } 批量导出是一个地址
 
 ```js
 let x = 10;
 let y = 20;
 setTimeout(() => {
   x = 100;
-  y = 200
-}, 10)
+  y = 200;
+}, 10);
 
-export  { x }
-export default y
+export { x };
+export default y;
 ```
 
 # AMD
+
 <!-- 加载完毕后使用 -->
+
 require(['',''], function(a,b){
-  a.add();
-  b.add()
+a.add();
+b.add()
 })
+
 # CMD
+
 <!-- 依赖就近，延迟执行 -->
+
 defined(function(require, exports, module){
-  var a = require('a');
-  
+var a = require('a');
+
 })
 
 # export
+
 ```js
 //-------------a.js---------------------
-export default 'hello'
+export default "hello";
 
 //-------------index.js---------------------
-console.log(_) // hello 可以打印出来, 函数提升类似
-import _ from './a.js' 
+console.log(_); // hello 可以打印出来, 函数提升类似
+import _ from "./a.js";
 // if () {
 // 		console.log(import _ from './a.js') // ❌ 只能放到最外层作用域
 // }
-console.log(_) /// hello;
-_ = 'word' // ❌ 不能修改导出后的结果
+console.log(_); /// hello;
+_ = "word"; // ❌ 不能修改导出后的结果
 ```
 
 ## 异步导入
+
 ```js
-let btn = document.createElement('button')
-btn.addEventListener('click', function(){
-	import('./d.js').then((res)=>{ // import 返回是一个 promise，结果返回带 default
-    	console.log(res.default) // import * as res from './d.js'
-  })
-})
+let btn = document.createElement("button");
+btn.addEventListener("click", function () {
+  import("./d.js").then((res) => {
+    // import 返回是一个 promise，结果返回带 default
+    console.log(res.default); // import * as res from './d.js'
+  });
+});
 document.body.appendChild(btn);
 ```
