--- a/面试题/js/7.Object.prototype.toString 返回什么.md
+++ b/面试题/js/7.Object.prototype.toString 返回什么.md
@@ -17,15 +17,11 @@ console.log(isArray([])); // true
 ```
 
 ```js
-const [isArray, isString, isObject] = [
-  "Array",
-  "String",
-  "Object",
-].map((name) => (context) =>
-  Object.prototype.toString.call(context) === `[object ${name}]`
+const [isArray, isString, isObject] = ["Array", "String", "Object"].map(
+  (name) => (context) =>
+    Object.prototype.toString.call(context) === `[object ${name}]`
 );
 console.log(isString("abc"));
 ```
-
 
 它的缺点是不能校验自定义类型
