--- a/面试题/vue/2.vue数组是否响应.md
+++ b/面试题/vue/2.vue数组是否响应.md
@@ -24,3 +24,9 @@ const myArray = Object.create(Array.prototype);
   }
 );
 ```
+
+```js
+if (Array.isArray(obj)) {
+  obj.__proto__ = myArray; // 劫持对象原型
+}
+```
