--- a/面试题/webpack/10.热更新 HMR.md
+++ b/面试题/webpack/10.热更新 HMR.md
@@ -1,7 +1,8 @@
 # 热更新 HMR
 
 ## webpack-dev-server.js
-- 通过 express启动一个服务器，监听文件编译结束，然后通过 socket 将文件 hash 发送给客户端
+
+- 通过 express 启动一个服务器，监听文件编译结束，然后通过 socket 将文件 hash 发送给客户端
 
 ```js
 const path = require("path");
@@ -43,7 +44,7 @@ class Server {
           next();
         }
       } catch (error) {
-          return res.sendStatus(404);
+        return res.sendStatus(404);
       }
     };
     app.use(webpackDevMiddleware);
@@ -65,12 +66,10 @@ class Server {
 }
 let server = new Server(compiler);
 server.listen(8080);
-
-
 ```
 
-
 ## webpack-hot-dev-client.js
+
 - 客户端启动一个 socket 监听服务器返回的 hash, 通过 jsonp 请求新文件，实现热更新
 
 ```js
@@ -86,7 +85,7 @@ const onConnected = () => {
     hotCheck();
   });
   socket.on("disconnect", () => {
-     hotCurrentHash = currentHash = null;
+    hotCurrentHash = currentHash = null;
   });
 };
 function hotCheck() {
@@ -104,12 +103,16 @@ function hotCheck() {
 function hotDownloadUpdateChunk(chunkId) {
   var script = document.createElement("script");
   script.charset = "utf-8";
-  script.src = "/" + chunkId + "." + hotCurrentHash+ ".hot-update.js";
+  script.src = "/" + chunkId + "." + hotCurrentHash + ".hot-update.js";
   document.head.appendChild(script);
 }
 function hotDownloadManifest() {
   var url = "/" + hotCurrentHash + ".hot-update.json";
-  return fetch(url).then(res => res.json()).catch(error=>{console.log(error);});
+  return fetch(url)
+    .then((res) => res.json())
+    .catch((error) => {
+      console.log(error);
+    });
 }
 window.webpackHotUpdate = (chunkId, moreModules) => {
   for (let moduleId in moreModules) {
@@ -148,8 +151,9 @@ window.hotCreateModule = () => {
     },
   };
   return hot;
-}
+};
 ```
 
 ## 如何监听文件发生变化
-> 轮询判断文件的最后编辑时间是否变化，某个文件发生了变化，并不会立刻告诉监听者，而是先缓存起来，等aggregateTimeout （监听到变化发生后会等到300ms再去执行，默认300ms）
+
+> 轮询判断文件的最后编辑时间是否变化，某个文件发生了变化，并不会立刻告诉监听者，而是先缓存起来，等 aggregateTimeout （监听到变化发生后会等到 300ms 再去执行，默认 300ms）
