--- a/面试题/webpack/4.如何实现一个 plugin 插件.md
+++ b/面试题/webpack/4.如何实现一个 plugin 插件.md
@@ -1,14 +1,18 @@
 # 如何实现一个 plugin 插件
 
+[webpack-plugin](https://webpack.docschina.org/api/compiler-hooks/)
+
+- 基于 tapable 扩展出的，事件广播
 - 插件 time-webpack-plugin
-```js 
+
+```js
 class TimePlugin {
   constructor() {
-    console.time('time');
+    console.time("time");
   }
   apply(compiler) {
-    compiler.hooks.afterEmit.tapAsync('TimePlugin', (compilation, callback) => {
-      console.timeEnd('time');
+    compiler.hooks.afterEmit.tapAsync("TimePlugin", (compilation, callback) => {
+      console.timeEnd("time");
       callback();
     });
   }
@@ -18,9 +22,9 @@ module.exports = TimePlugin;
 ```
 
 - 配置文件
-```js
 
-const TimePlugin = require('./time.webpack');
+```js
+const TimePlugin = require("./time.webpack");
 // ....
 config.plugins.push(new TimePlugin());
 ```
@@ -30,7 +34,7 @@ let compiler = new Compiler({});
 // 加载插件
 if (options.plugins && Array.isArray(options.plugins)) {
   for (const plugin of options.plugins) {
-   plugin.apply(compiler);
+    plugin.apply(compiler);
   }
 }
 ```
