--- a/面试题/webpack/5.webpack 构建过程.md
+++ b/面试题/webpack/5.webpack 构建过程.md
@@ -1,17 +1,17 @@
 # webpack 构建过程
+
 - 初始化参数：将 shell 和 配置文件中的 参数进行合并，得到最终参数
-- 初始化 compiler ：初始化 Compiler对象，加载所有配置的插件，注册所有的插件
+- 初始化 compiler ：初始化 Compiler 对象，加载所有配置的插件，注册所有的插件
 - 开始编译：开始执行 compire run，
   - 从入口 entry 开始分析，
   - 解析文件通过 loader 进行编译
   - 递归找到模块依赖模块
-  - 根据entry, 组装多个包含多个模块的 chunk 
-  - 每个chunk 包装成一个文件并输出
-
+  - 根据 entry, 组装多个包含多个模块的 chunk
+  - 每个 chunk 包装成一个文件并输出
 
 ```js
-let fs = require('fs');
-let path = require('path');
+let fs = require("fs");
+let path = require("path");
 
 const { SyncHook } = require("tapable");
 
@@ -24,11 +24,11 @@ class Compiler {
     };
   }
   run() {
-    this.hooks.run.call();  
+    this.hooks.run.call();
     let modules = [];
     let chunks = [];
     let files = [];
-    
+
     // entry 找到入口
     let entry = path.join(this.options.context, this.options.entry);
 
@@ -37,7 +37,7 @@ class Compiler {
     let entrySource = babelLoader(entryContent);
     let entryModule = { id: entry, source: entrySource };
     modules.push(entryModule);
-    
+
     //递归找依赖
     let title = path.join(this.options.context, "./src/title.js");
     let titleContent = fs.readFileSync(title, "utf8");
@@ -82,13 +82,13 @@ class Compiler {
       this.options.output.path,
       this.options.output.filename
     );
-    fs.writeFileSync(outputPath, file.source,'utf8');
-      this.hooks.done.call();  
+    fs.writeFileSync(outputPath, file.source, "utf8");
+    this.hooks.done.call();
   }
 }
 
 // 获取参数
-let options = require('./webpack.config');
+let options = require("./webpack.config");
 
 // 初始化 compiler
 let compiler = new Compiler(options);
@@ -96,7 +96,7 @@ let compiler = new Compiler(options);
 // 加载插件
 if (options.plugins && Array.isArray(options.plugins)) {
   for (const plugin of options.plugins) {
-   plugin.apply(compiler);
+    plugin.apply(compiler);
   }
 }
 
