--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -57,6 +57,7 @@
 - ✅ 1.浏览器进程，渲染过进程，渲染流程
 - ✅ 2.defer
 - ✅ 3.浏览器安全方面做了哪些， xss 工具方式是怎样，如何做，前端在 XSS、XSF 防御是如何做的
+- ✅ 4.输入 url 到看到页面发生了什么
 - ✅ cdn 主要放了什么，index.html,css,js 文件放到哪里，有做缓存，浏览器缓存有更新和变化怎么办，浏览器缓存缓存多长时间，哪些资源可以使用 cdn 引入，如何判断 ping
 - 跨域的解决方案，abc 三个域名 localstorage 共享，个二级域名不同 cookie 怎么传输，跨页面传输数据有哪些方式
 - 有做 ssr，预渲染和 ssr 区别
@@ -112,16 +113,13 @@
 - ✅ 4.如何实现一个 plugin 插件
 - ✅ 5.webpack 构建过程
 - ✅ 6.webpack 构建优化、前端性能优化
-
 - 7.loader 执行顺序
-- 8.webpack 分包加载用的是哪个，分包的原理
-- 9.webpack 的 tree shaking 是怎么实现的
-- 10.热更新 HMR
-
+- ✅ 8.webpack 分包加载用的是哪个，分包的原理
+- ✅ 9.webpack 的 tree shaking 是怎么实现的
+- ✅ 10.热更新 HMR
 - webpack 如何实现的模块依赖关系 traverse ast ImportDeclaration
 - webpack 如何指定模块化规范（amd、cmd 这些）libraryTarget: 'umd',
 - dll 动态链接库
-
 
 # node
 
