--- a/面试题/HTTP/5.http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进.md
+++ b/面试题/HTTP/5.http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进.md
@@ -3,37 +3,45 @@
 ## http1.1
 
 - 长链接、断点续传，管线化
-  http1.1
 
 引入了持久链接，即 TCP 默认不关闭，可以被多个请求复用
-引入管道机制，一个 TCP 连接，可以同时发送多个请求
+引入管道机制，一个 TCP 连接，可以同时发送多个请求，浏览器一般是 6 哥
 新增了一些缓存的字段
 新增了一些方法，PUT、DELETE、OPTIONS、PATCH
 支持断点续传，通过请求头字段 Rang 来实现
-http2.0
 
 ## http2
 
-- 信道复用
-- 分帧传输，又上下文联系，进行组合，并发送数据
-- server push
+> http2 建立在 https 基础之上
 
-头部压缩
-多路复用
-二进制传输，头信息和数据体都是二进制
-请求优先级， 设置数据帧的优先级，让服务器优先处理
-服务器主动推送消息
+- 分帧传输，又上下文联系，进行组合，并发送数据（二进制传输，头信息和数据体都是二进制）
+- 服务器主动推送消息（server push）
+- 请求优先级， 设置数据帧的优先级，让服务器优先处理
+- 多路复用（信道复用）
+- 头部压缩
 
 ## http3
 
+> 基于 UDP
+
+- 拥塞控制
 - 扩展了多路复用
 - 传输速度提升
 - 头部压缩
-- 拥塞控制
 
-管道机制会造成什么样的问题，http2.0 是怎么解决的
-头部压缩的原理是什么
-options 方法的作用
-http2.0 允许服务器主动推送消息，那跟 WebSocket 有什么区别吗
+## 管道机制会造成什么样的问题，http2.0 是怎么解决的
 
-https://juejin.cn/post/6844904100035821575#heading-91
+头部拥塞，多路复用，分帧传输，进行组合
+
+## 头部压缩的原理是什么
+
+HPACK 算法
+服务器和客户端之间建立哈希表，将用到的字段存放在这张表中，那么在传输的时候对于之前出现过的值，
+只需要把索引(比如 0，1，2，...)传给对方即可，对方拿到索引查表就行了。这种传索引的方式，可以说让请求头字段得到极大程度的精简和复用。
+
+## http2.0 允许服务器主动推送消息，那跟 WebSocket 有什么区别吗
+
+> 而 HTTP2.0 则是对 HTML、CSS 等 JS 资源的传输方式进行了优化，并没有提供新的 JS API，也不能用于实时传输消息。
+> WebSocket 是基于 HTTP1.1 的协议，可以简单理解为创建了一条 TCP 连接，
+
+> https://juejin.cn/post/6844904100035821575#heading-91
