--- a/面试题/js/1.['1', '2', '3'].map(parseInt) what & why.md
+++ b/面试题/js/1.['1', '2', '3'].map(parseInt) what & why.md
@@ -10,54 +10,64 @@
   const intValue = parseInt(string[, radix]);
 
 - string 要被解析的值。如果参数不是一个字符串，则将其转换为字符串(使用 ToString 抽象操作)。字符串开头的空白符将会被忽略
-- radix 一个介于2和36之间的整数(数学系统的基础)，表示上述字符串的基数。默认为10。
-返回值 返回一个整数或NaN
+- radix 一个介于 2 和 36 之间的整数(数学系统的基础)，表示上述字符串的基数。默认为 10。
+  返回值 返回一个整数或 NaN
 
-在radix为 undefined，或者radix为 0 或者没有指定的情况下，JavaScript 作如下处理：
+在 radix 为 undefined，或者 radix 为 0 或者没有指定的情况下，JavaScript 作如下处理：
 
-- 如果字符串 string 以"0x"或者"0X"开头, 则基数是16 (16进制).
-- 如果字符串 string 以"0"开头, 基数是8（八进制）或者10（十进制），那么具体是哪个基数由实现环境决定。ECMAScript 5 规定使用10，但是并不是所有的浏览器都遵循这个规定。因此，永远都要明确给出radix参数的值。
-- 如果字符串 string 以其它任何值开头，则基数是10 (十进制)。
+- 如果字符串 string 以"0x"或者"0X"开头, 则基数是 16 (16 进制).
+- 如果字符串 string 以"0"开头, 基数是 8（八进制）或者 10（十进制），那么具体是哪个基数由实现环境决定。ECMAScript 5 规定使用 10，但是并不是所有的浏览器都遵循这个规定。因此，永远都要明确给出 radix 参数的值。
+- 如果字符串 string 以其它任何值开头，则基数是 10 (十进制)。
 
->总结：parsetInt需要两个参数，第一个是数值，第二个参数是几进制来算(不传默认为10，0也是10)
+> 总结：parsetInt 需要两个参数，第一个是数值，第二个参数是几进制来算(不传默认为 10，0 也是 10)
 
 # map
+
 ```js
-var array = arr.map(item => item)
-var array = arr.map(funs)
+var array = arr.map((item) => item);
+var array = arr.map(funs);
 ```
 
->总结：map的参数会被执行，执行参数第一个：当前值；第二个：当前下标；第三个：当前当前数组
+> 总结：map 的参数会被执行，执行参数第一个：当前值；第二个：当前下标；第三个：当前当前数组
 
 # 变身
+
 ```js
-var myParseInt = (string, radix) =>{
-  return parseInt(string,radix)
-}
-var arr = [1, 2, 3]
-var array = arr.map(myParseInt)
-console.log(array)
+var myParseInt = (string, radix) => {
+  return parseInt(string, radix);
+};
+var arr = [1, 2, 3];
+var array = arr.map(myParseInt);
+console.log(array);
 ```
+
 - 或者也可以这样理解
 
 ```js
-['1', '2', '3'].map((item, index) => {
-	return parseInt(item, index)
-})
+["1", "2", "3"].map((item, index) => {
+  return parseInt(item, index);
+});
 ```
 
 # 分享
+
 [['1', '2', '3'].map(parseInt) what & why](https://github.com/sisterAn/blog/issues/19)
 
 # 十进制互相转化
+
 ## 十进制转化二进制（8421）
-- 10 = 2^1 + 2^0 =  2
-- 11 = 2^1 * 1 + 2^0 * 1
+
+- 10 = 2^1 + 2^0 = 2
+- 11 = 2^1 _ 1 + 2^0 _ 1
 
 # 十进制转化为八进制
-parseInt("17", 8);
-- 17 = 8^1 * 1 + 8^0 * 7 =  8+7 = 15
 
-# 十进制转化为16进制
+parseInt("17", 8);
+
+- 17 = 8^1 _ 1 + 8^0 _ 7 = 8+7 = 15
+
+# 十进制转化为 16 进制
+
 parseInt("FXX123", 16);
-- 123 = 16^2 + 16 * 2 +  3 = 256 + 32 + 3 = 291
+
+- 123 = 16^2 + 16 \* 2 + 3 = 256 + 32 + 3 = 291
