--- a/面试题/js/26.new 做了什么.md
+++ b/面试题/js/26.new 做了什么.md
@@ -1,10 +1,11 @@
 # new 做了什么
+
 ```js
-function myNew (context, ...args) {
+function myNew(context, ...args) {
   var obj = {};
-  obj.__proto__ = context.prototype
+  obj.__proto__ = context.prototype;
   // var obj = Object.create(context.prototype)
-  const result = context.call(obj, ...args)
+  const result = context.call(obj, ...args);
   return result instanceof Object ? result : obj;
 }
 ```
