--- a/面试题/js/6.slice，splice，区别，是否改变数组.md
+++ b/面试题/js/6.slice，splice，区别，是否改变数组.md
@@ -23,15 +23,16 @@ arr.slice(2, -3); // [3, 4]
 ```
 
 slice 是浅拷贝
+
 ```js
-const arr = [{name: '1'}, 2, {name: 'test'}]
+const arr = [{ name: "1" }, 2, { name: "test" }];
 
-const arr2 = arr.slice(0, 2)
-console.log(arr2)
-arr[0].name = 'abc'
-console.log(arr2)
-
+const arr2 = arr.slice(0, 2);
+console.log(arr2);
+arr[0].name = "abc";
+console.log(arr2);
 ```
+
 ## splice
 
 > 删除、新增元素
