--- a/面试题/js/8.闭包.md
+++ b/面试题/js/8.闭包.md
@@ -14,7 +14,9 @@ function fn() {
   };
 }
 ```
+
 ## 作用
+
 - 延续局部变量寿命、封装变量
 
 ## 应用场景
@@ -55,28 +57,30 @@ for (var i = 0; i < 10; i++) {
 }
 ```
 
-
 ## document.getElementById
+
 ```js
-var getId = function( id ){
-  return document.getElementById( id );
+var getId = function (id) {
+  return document.getElementById(id);
 };
-getId( 'div1' );
+getId("div1");
 ```
+
 我们也许思考过为什么不能用下面这种更简单的方式:
-```var getId = document.getElementById; getId( 'div1' );```
+`var getId = document.getElementById; getId( 'div1' );`
 
 这是因为许多引擎的 document.getElementById 方法的内部实现中需要用到 this。这个 this 本来被期望指向 document，当 getElementById 方法作为 document 对象的属性被调用时，方法内部的 this 确实是指 向 document 的。
 
 但当用 getId 来引用 document.getElementById 之后，再调用 getId，此时就成了**普通函数调用**， 函数内部的 this 指向了 window，而不是原来的 document。
+
 ```js
-document.getElementById = (function( func ){
-  return function() {
-    return func.apply( document, arguments );
-  }
-})( document.getElementById );
+document.getElementById = (function (func) {
+  return function () {
+    return func.apply(document, arguments);
+  };
+})(document.getElementById);
 var getId = document.getElementById;
-var div = getId( 'div1' );
+var div = getId("div1");
 ```
 
 ## 缺点
@@ -84,8 +88,9 @@ var div = getId( 'div1' );
 - 使用不当容易造成内存泄露
 
 # 内存泄露
+
 - 闭包，未用到变量未及时释放
 - 定时器未释放
-- dom引用：dom删除时，引用未解除
+- dom 引用：dom 删除时，引用未解除
 - 意外全局变量
 - 监听事件：未正确销毁
